udpated pss code

--- a/code-environment-template/code/power-precision-samplesize/pss-comparison-based/pss-cb-v2-report-results-two_sample.Rmd
+++ b/code-environment-template/code/power-precision-samplesize/pss-comparison-based/pss-cb-v2-report-results-two_sample.Rmd
@@ -117,9 +117,13 @@ These two quantities are often combined as Cohen's $d$, defined as $d = \delta \
 
 ## Parameters Chosen
 
-<!-- The most conservative sample size will be the largest one we anticipate needing. To calculate this, we need to use the smallest hypothesized true average difference for the a priori research hypothesis, along with the largest hypothesized true outcome SD. Based on our literature review, pilot study data, and scientific judgment, we will assume that the smallest true average difference is $\delta =$ `r tbl_pss_parameters$delta_primary` units, and that the largest SD of pre- and post-treatment outcomes is `r tbl_pss_parameters$sd_primary`. (Note that the latter is not the same as the SD of the per-participant pre-post difference in outcomes, $\sigma_Y$. See the **Appendix** for details.) -->
+<!-- The most conservative sample size will be the largest one we anticipate needing. To calculate this, we need to use the smallest hypothesized true average difference for the a priori research hypothesis, along with the largest hypothesized true outcome SD.
 
-The most conservative sample size will be the largest one we anticipate needing. To calculate this, we need to use the smallest hypothesized true average difference among the `r tbl_pss_parameters$num_of_tests` a priori research hypotheses, along with the largest hypothesized true outcome SD. Based on our literature review and scientific judgment, we will assume that the smallest true average difference is $\delta =$ `r tbl_pss_parameters$delta_primary` units, and that the largest SD of pre- and post-treatment outcomes in both groups is `r tbl_pss_parameters$sd_primary`. (Note that the latter is not the same as the SD of the per-participant pre-post difference in outcomes, $\sigma_Y$. See the **Appendix** for details.) The same sample size results will apply if the smallest true average difference is `r tbl_pss_parameters$delta_secondary %>% round(2)` units, and the largest SD of pre- and post-treatment outcomes in both groups is `r tbl_pss_parameters$sd_secondary`.
+Based on our literature review, pilot study data, and scientific judgment, we assumed that the smallest true average difference is $\delta =$ `r tbl_pss_parameters$delta_primary` units, and that the largest SD of pre- and post-treatment outcomes is `r tbl_pss_parameters$sd_primary`. (Note that the latter is not the same as the SD of the per-participant pre-post difference in outcomes, $\sigma_Y$. See the **Appendix** for details.) -->
+
+The most conservative sample size will be the largest one we anticipate needing. To calculate this, we need to use the smallest hypothesized true average difference among the `r tbl_pss_parameters$num_of_tests` a priori research hypotheses, along with the largest hypothesized true outcome SD.
+
+Based on our literature review and scientific judgment, we assumed that the smallest true average difference is $\delta =$ `r tbl_pss_parameters$delta_primary` units, and that the largest SD of pre- and post-treatment outcomes in both groups is `r tbl_pss_parameters$sd_primary`. (Note that the latter is not the same as the SD of the per-participant pre-post difference in outcomes, $\sigma_Y$. See the **Appendix** for details.) The same sample size results will apply if the smallest true average difference is `r tbl_pss_parameters$delta_secondary %>% round(2)` units, and the largest SD of pre- and post-treatment outcomes in both groups is `r tbl_pss_parameters$sd_secondary`.
 
 We will conduct `r tbl_pss_parameters$num_of_tests` main statistical hypothesis tests. These correspond to our primary and secondary research hypotheses or endpoints. We will use a Bonferroni correction that equally splits our chosen maximum familywise false positive rate (FPR) (equivalently, statistical significance level) of $\alpha = $ `r chosen_alpha_familywise` among `r tbl_pss_parameters$num_of_tests` tests; i.e., each test's $\alpha$ is equal to $\alpha$/`r tbl_pss_parameters$num_of_tests`.
 <!-- We will conduct one main statistical hypothesis test. These correspond to our primary and secondary research hypotheses or endpoints. We will use a maximum false positive rate (FPR) (equivalently, statistical significance level) of $\alpha =$ `r chosen_alpha_familywise`. -->
@@ -128,7 +132,7 @@ We will conduct `r tbl_pss_parameters$num_of_tests` main statistical hypothesis 
 
 ((example ICC text 2)) The literature supports a pre-post intraclass correlation (ICC) per participant of `r chosen_icc` for the StudySurvey scale. This is based on using the smallest StudySurvey test-retest ICC of [study domain reference](link).
 
-We will assume that at most `r tbl_pss_parameters$p_attrition * 100`% of participants may drop out before study completion.
+We assumed that at most `r tbl_pss_parameters$p_attrition * 100`% of participants may drop out before study completion.
 
 
 
@@ -142,7 +146,7 @@ We will assume that at most `r tbl_pss_parameters$p_attrition * 100`% of partici
 
 The naive Cohen's $d$ (i.e., before adjusting for ICC, or equivalently setting the ICC to 0.5) is `r tbl_pss_parameters$cohens_d_initial %>% round(3)`. The Cohen's $d$ we will use accounts for the ICC, and is equal to $d = \delta \big/ \sqrt{2 \sigma^2 (1 - ICC)}$, where $\sigma^2$ represents the variance of raw outcomes in either group at either pre- or post-treatment (see Appendix).
 
-Here are two examples of the minimum and maximum required sample sizes among different scenarios shown in the table below. Each scenario represents different parameter values.
+Here are two examples of the minimum and maximum required sample sizes among different scenarios shown in Table 1 below. Each scenario represents a different combination of parameter values.
 
 - `r tbl_sims_sentences_ntests$Description[tbl_sims_final_ntests$sampsize == min(tbl_sims_final_ntests$sampsize, na.rm = TRUE)]`
 - `r tbl_sims_sentences_ntests$Description[tbl_sims_final_ntests$sampsize == max(tbl_sims_final_ntests$sampsize, na.rm = TRUE)]`
@@ -152,8 +156,8 @@ Note that:
 - For a given FPR, the required sample size increases with higher required power.
 - For a given FPR and power, the required sample size decreases with higher ICC.
 
-```{r echo=FALSE, out.width="100%", fig.cap="One Sample: One Statistical Test"}
-tbl_sims_fancy_ntests %>% knitr::kable("simple")
+```{r echo=FALSE, out.width="100%"}
+tbl_sims_fancy_ntests %>% knitr::kable("simple", caption = "Sample size under different parameter scenarios.")
 ```
 
 
